--- a/workflowdemo/Apps/LoginApp/templates/login.html
+++ b/workflowdemo/Apps/LoginApp/templates/login.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-	<p style="text-align: center"><a class="btn btn-lg " href="signin" target="_self"><button>登陆</button></a></p>
+	<p style="text-align: center"><a class="btn btn-lg " href="../accounts/login" target="_self"><button>登陆</button></a></p>
 	<p style="text-align: center"><a class="btn btn-lg " href="register" target="_self"><button>注册</button></a></p>
 
 </body>
