--- a/workflowdemo/adminlte/templates/adminlte/base.html
+++ b/workflowdemo/adminlte/templates/adminlte/base.html
@@ -5,7 +5,7 @@
   {%load i18n%}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{% block title %} WORKFLOW {% endblock %}</title>
+  <title>{% block title %} 原生态实验室 {% endblock %}</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -64,9 +64,9 @@
   <!-- /.content-wrapper -->
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 0.01
+      <b>Version</b> 1.0
     </div>
-    <strong>Copyright &copy; 2014-2018 <a href="https://github.com/jimmy201602/workflowdemo">WORKFLOWDEMO</a>.</strong> All rights
+    <strong>Copyright &copy; 2021-2022 <a href="http://8.140.114.120:9000">原生态实验室</a>.</strong><a href="http://www.126.com">Email:dingyinglai@126.com</a> All rights
     reserved.
   </footer>
   {% endblock %}
