--- a/workflowdemo/templates/admin/login.html
+++ b/workflowdemo/templates/admin/login.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>WORKFLOW</title>
+    <title>原生态实验室-工单系统</title>
 
 <link href="/static/new/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/new/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                 </div>
 
             </div>
-            <h3>欢迎使用工单管理系统</h3>
+            <h3>欢迎使用原生态实验室-工单管理系统</h3>
             {% if form.non_field_errors %}
             {% for error in form.non_field_errors %}
             <p style="color: red">
@@ -62,7 +62,7 @@
                 <!--<a href="/accounts/resetpass/"><small>Forgot password?</small></a>-->
                 <!--<p class="text-muted text-center"><small>Do not have an account?</small></p>-->
             </form>
-            <p class="m-t"> <small>WORKFLOW &copy; 2018</small> </p>
+            <p class="m-t"> <small>原生态实验室 &copy; 2021</small> </p>
         </div>
     </div>
 
