--- a/workflowdemo/templates/registration/logged_out.html
+++ b/workflowdemo/templates/registration/logged_out.html
@@ -56,7 +56,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-<a class="navbar-brand" href="/">WORKFLOW</a>
+<a class="navbar-brand" href="/">原生态实验室-工单系统</a>
 
                 </div>
                 <div id="header-navbar-collapse" class="navbar-collapse collapse navbar-right">
@@ -109,7 +109,7 @@
 
         
 
-<p>感谢你在本站点花费了一些时间！</p>
+<p>感谢您在本站点停留,祝您工作顺利 ......</p>
 
 <p><a href="{% url 'login' %}" class="btn btn-default">重新登录</a></p>
 
