--- a/workflowdemo/workflow/templates/workflow/my.html
+++ b/workflowdemo/workflow/templates/workflow/my.html
@@ -72,7 +72,7 @@
                         <tr>
                             <th >流水号</th>
                             <th >标题</th>
-                            <th >业务流程</th>
+                            <th >工单类型</th>
                             <th >当前状态</th>
                             <th >创建人</th>
                             <th >创建时间</th>
