--- a/workflowdemo/workflow/templates/workflow/myrelated.html
+++ b/workflowdemo/workflow/templates/workflow/myrelated.html
@@ -72,7 +72,7 @@
                         <tr>
                             <th >流水号</th>
                             <th >标题</th>
-                            <th >业务流程</th>
+                            <th >工单类型</th>
                             <th >当前状态</th>
                             <th >创建人</th>
                             <th >创建时间</th>
@@ -86,7 +86,7 @@
                         <tr>
                             <td>{{ticket.sn}}</td>
                             <td>{{ticket.title}}</td>
-                            <td>{{ticket.workflow.workflow_name}}</td>
+                            <td>{{ticket.workflow_info.workflow_name}}</td>
                             <td>{{ticket.state.state_name}}</td>
                             <td>{{ticket.creator}}</td>
                             <td>{{ticket.gmt_created}}</td>
