add mail notify function

--- a/workflowdemo/templates/admin/login.html
+++ b/workflowdemo/templates/admin/login.html
@@ -36,7 +36,7 @@
             <div>
 
                 <div class="col-md-12 column">
-                    <img  src="/static/img/logo1.jpg" width="140" height="140" class="img-circle" />
+                    <img  src="/static/img/user-160x160.jpg" width="140" height="140" class="img-circle" />
                 </div>
 
             </div>
