--- a/workflowdemo/Apps/LoginApp/templates/register.html
+++ b/workflowdemo/Apps/LoginApp/templates/register.html
@@ -57,15 +57,15 @@
 <div class="container">
 <form target="form" class="form-signin" action="save" method="post">
     <span>
-        用户:<input class="form-control" type="text" placeholder="输入用户" name="username">
+        用户:<input class="form-control" type="text" placeholder="输入用户" id="username" name="username">
     </span>
     <br>
     <span>
-        密码:<input class="form-control" type="password" placeholder="输入密码" name="password">
+        密码:<input class="form-control" type="password" placeholder="输入密码" id="password" name="password">
     </span>
     <br>
     <span>
-        邮箱:<input class="form-control" type="text" placeholder="选填" name="mail">
+        邮箱:<input class="form-control" type="text" placeholder="输入邮箱" id="mail" name="mail">
     </span>
     <br>
     <span>
@@ -83,7 +83,22 @@
 <script src="/static/bootstrap/js/jquery-ui.min.js"></script>
 
 <script>
-$("#submit").click();
+//$("#submit").click();
+$("form").submit(function(){
+      	var username = $("#username").val();
+      	var password = $("#password").val();
+      	var mail     = $("#mail").val();
+	if((username == "") || (password=="")){
+		alert("请正确填写,不能为空!!!");
+ 	        window.location.href= "";
+        }	
+	else{
+		if(mail == ""){
+		    alert("请填写邮箱,不能为空!!!");
+ 	            window.location.href= "";
+                }
+	}
+})	
 $("#form").load(function(){
    var restr = $(this).contents().find("body").text(); 
    if (restr == "login success")
