modify background color

--- a/workflowdemo/workflow/templates/workflow/ticketdownload.html
+++ b/workflowdemo/workflow/templates/workflow/ticketdownload.html
@@ -32,7 +32,7 @@
     {% for workflow in workflows %}
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-aqua"><i class="fa fa-files-o"></i></span>
+            <span class="info-box-icon bg-teal"><i class="fa fa-flag"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-number"><a href="{% url 'downloadticketdata' workflow.id %}">{{workflow.name}}</a></span>
