fix code about show ticket number

--- a/workflowdemo/workflow/templates/workflow/my.html
+++ b/workflowdemo/workflow/templates/workflow/my.html
@@ -16,7 +16,8 @@
             "searching": true,
             "ordering": true,
             "info": true,
-            "iDisplayLength": 10,
+            "iDisplayLength": 100,
+            "lengthMenu": [100],
             "autoWidth": false,
         });
     });
