--- a/workflowdemo/adminlte/templates/adminlte/nav-left.html
+++ b/workflowdemo/adminlte/templates/adminlte/nav-left.html
@@ -30,7 +30,7 @@
             <li class="header">MAIN NAVIGATION</li>
             <li class="treeview active">
                 <a href="#">
-                    <i class="fa fa-share"></i> <span>工单系统</span>
+                    <i class="fa fa-th"></i> <span>工单系统</span>
                     <span class="pull-right-container">
         	      <i class="fa fa-angle-left pull-right"></i>
 	            </span>
@@ -44,9 +44,9 @@
                 </ul>
             </li>
 
-            <li class="treeview active">
+            <li class="treeview active ">
                 <a href="#">
-                    <i class="fa fa-share"></i> <span>下载</span>
+                    <i class="fa fa-files-o"></i> <span>下载</span>
                     <span class="pull-right-container">
         	      <i class="fa fa-angle-left pull-right"></i>
 	            </span>
